# ExpRelNN

./: LICENSE  README.md  main.py  model.py  optimizer.py  pyproject.toml  trainer.py
er_optim/: __init__.py  model.py  optimizer.py  trainer.py
er_optim/gui/: app.py
