[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "er_optim"
version = "0.1.0"
authors = [
  { name="Stepan Ershov", email="stepanershov8@gmail.com" },
]
description = "Продвинутый PyTorch оптимизатор второго порядка на основе метода экспоненциальной релаксации для жестких задач."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy",
    "scipy",
    "matplotlib",
    "PyQt5"
]

[project.scripts]
er-studio = "er_optim.gui.app:main"